[metadata]
name = crane
author = zhangwen
author-email = zhangwen1@unionpay.com
summary = Provide Restfull API for Switch
description-file = README.rst
license = Apache-2
home-page = https://x.x.x.x
classifier = 
    Environment :: NET
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Topic :: System :: Monitor

[files]
packages = 
    crane
