[metadata]
name = crane
author = zhangwen
author-email = zhangwen1@unionpay.com
summary = Provide Restfull API for Test
description-file = README.rst
license = Apache-2
home-page = https://x.x.x.x
classifier = 
    Environment :: Test
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Topic :: System :: Monitor

[files]
packages = 
    crane
include_package_data=True

[nosetests]
match=^test
where=crane
nocapture=1
cover-package=crane
cover-erase=1

[options.entry_points]
wsgi_scripts =
    crane_api = crane.api:build_wsgi_app

console_scripts =
    crane_cli_api = crane.api:api
